--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,3 @@
 VITE_API_URL=/api
+VITE_GOOGLE_CLIENT_ID=991903562619-8optm37i4ueup2edr9orsdbuu2ifda4u.apps.googleusercontent.com
+VITE_RAZORPAY_KEY=rzp_test_w2D9R4s28OGB9e
