--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
-VITE_API_URL=http://localhost:3000/api
+VITE_API_URL=
 VITE_GOOGLE_CLIENT_ID=991903562619-8optm37i4ueup2edr9orsdbuu2ifda4u.apps.googleusercontent.com
 VITE_RAZORPAY_KEY=rzp_test_w2D9R4s28OGB9e
