--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
+    "canvas": "^3.1.2",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
