--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,4 +1,4 @@
 VITE_API_URL=
-VITE_GOOGLE_CLIENT_ID=991903562619-8optm37i4ueup2edr9orsdbuu2ifda4u.apps.googleusercontent.com
-VITE_RAZORPAY_KEY=rzp_test_w2D9R4s28OGB9e
+VITE_GOOGLE_CLIENT_ID=
+VITE_RAZORPAY_KEY=
 
